@@ -1,3 +1,7 @@
+2012-06-07  Frank Warmerdam  <warmerdam@google.com>
+
+	* src/pj_init.c: avoid leaking vgridlist_geoid (#175).
+
 2012-06-01  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>
 
 	* Removed the old JNI wrappers from trunk. Those wrappers are
